fixing overflow

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -61,6 +61,7 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 a, a:visited, a:hover{
@@ -89,6 +90,7 @@ body {
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    overflow-x: hidden;
 }
 
 h1, h2, h3, h4 {
